test/simple/ill-typed/ho_fun_left.caprice
(* TEST
  include refute;
*)


let f (g : int -> int) : bool -> int =
  g
